# metaprivBIDS

./: README.md  install.py  pyproject.toml
docs/: examples.rst  getting_started.rst  index.rst
docs/_build/html/: getting_started.html  searchindex.js
docs/_build/html/_sources/: getting_started.rst.txt
metaprivBIDS/: metaprivBIDS.py
metaprivBIDS/corelogic/: metapriv_corelogic.py
