[tool.poetry]
name = "metaprivBIDS"
version = "0.1.0"
description = "A tool for assessing data privacy in tabular data."
authors = ["Emilie B. Kibsgaard <em_kibsgaard@outlook.dk>", "Cyril Pernet <cyrilmail@input.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cpernet/metaprivBIDS"
packages = [{ include = "metaprivBIDS" }]

[tool.poetry.dependencies]
python = ">=3.7.4"
pygraphviz = ">=1.7"
graphviz = ">=0.14"
tqdm = ">=4.62.3"
pytest = ">=3.0.5"
seaborn = ">=0.11.0"
pandas = ">=1.3.5"
matplotlib = ">=3.5.1"
PySide6 = ">=6.5.2"
networkx = ">=2.6.3"
numpy = ">=1.21.6"
piflib = ">=0.1.1"
scipy = ">=1.7.3"
setuptools = ">=42"
sphinx = { version = ">=4.0", optional = true }
sphinx_rtd_theme = { version = ">=1.0", optional = true }
myst-parser = { version = ">=0.13", optional = true }

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme", "myst-parser"]

[tool.poetry.scripts]
metaprivBIDS = "metaprivBIDS.metaprivBIDS:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = '.git*,*.svg,*.css,*.min.*,_build'
check-hidden = true
ignore-regex = '^\s*"image/\S+": ".*'
